trunk/Archive2/27/8167248960fb42/output
main.cpp:10:1: error: expected ';' after struct definition
 }
 ^
main.cpp:12:1: error: expected class-name before '{' token
 {
 ^
main.cpp:24:1: error: expected ';' after struct definition
 }
 ^
main.cpp: In constructor 'Alice::Alice(Base*)':
main.cpp:21:21: error: class 'Alice' does not have any field named '_b'
     Alice(Base * b):_b(b){}
                     ^
